improve swagger doc, embed frontend with statik
