# doc/swagger/gobank.swagger.json
@@ -1,8 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "create_user.proto",
-    "version": "version not set"
+    "title": "gobank API",
+    "version": "1.1",
+    "contact": {
+      "name": "gobank",
+      "url": "https://github.com/bbsemih/gobank",
+      "email": "ssemihberkay@gmail.com"
+    }
   },
   "tags": [
     {
@@ -18,6 +23,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Creates a new user",
+        "description": "Use this API to create a new user",
         "operationId": "GoBank_CreateUser",
         "responses": {
           "200": {
@@ -50,6 +57,8 @@
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Login a user",
+        "description": "Use this API login a user and get access token and refresh token",
         "operationId": "GoBank_LoginUser",
         "responses": {
           "200": {
